<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title" />
    
	<EditTextPreference
        android:key="address"
        android:title="@string/settings_address_title"
        android:summary="@string/settings_address_summary"
        android:defaultValue="demo.traccar.org" />

	<EditTextPreference
        android:key="port"
        android:title="@string/settings_port_title"
        android:summary="@string/settings_port_summary"
        android:numeric="integer"
        android:defaultValue="5005" />
	
	<EditTextPreference
        android:key="interval"
        android:title="@string/settings_interval_title"
        android:summary="@string/settings_interval_summary"
        android:numeric="integer"
        android:defaultValue="60" />

	<ListPreference
        android:key="provider"
        android:title="@string/settings_provider_title"
        android:summary="@string/settings_provider_summary"
        android:entries="@array/settings_provider_names"
        android:entryValues="@array/settings_provider_values"
        android:defaultValue="gps" />

    <CheckBoxPreference
        android:key="debug"
        android:title="@string/settings_debug_title"
        android:summary="@string/settings_debug_summary"
        android:defaultValue="true"
        android:enabled="false" />

    <CheckBoxPreference
        android:key="status"
        android:title="@string/settings_status_title"
        android:summaryOff="@string/settings_status_off_summary"
		android:summaryOn="@string/settings_status_on_summary"
        android:defaultValue="false" />

</PreferenceScreen>
